notify user of cart clearance on page refresh/close

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -63,6 +63,11 @@
 
   <script>var Alert = ReactBootstrap.Alert;</script>
 
+  <script>
+    // clear cart on pages refresh or close
+    window.BeforeUnloadEvent(localStorage.removeItem("samaria-cart"));
+  </script>
+
 </body>
 
 </html>
